# traj_ex_test

./: CMakeLists.txt  controller_interface_plugins.xml  moveit_ros_control_interface_plugins.xml  package.xml
launch/: traj_ex_test.launch  traj_ex_test_multi.launch  traj_ex_test_simple.launch  traj_ex_test_single.launch
src/: counter.h  test_controller.cpp  test_interface.cpp  traj_ex_test.cpp
